# japanese-ai-app

./: LICENSE  README.md  pyproject.toml  requirements.txt
english_exam_app/: manage.py
english_exam_app/accounts/: models.py
english_exam_app/accounts/migrations/: 0001_initial.py
english_exam_app/english_exam_app/: asgi.py  settings.py  settings_common.py  settings_dev.py  urls.py  wsgi.py
english_exam_app/main/: admin.py  forms.py  models.py  urls.py  views.py
english_exam_app/main/migrations/: 0001_initial.py  0002_auto_20200528_2234.py  0003_auto_20200529_0040.py
english_exam_app/main/templates/: base.html  diary_delete.html  diary_detail.html  diary_list.html  diary_update.html  examination.html  index.html  scoring_list.html  scoring_update.html
english_exam_app/static/css/: mystyle.css
