[tool.poetry]
name = "english-exam-app"
version = "0.1.0"
description = ""
authors = ["shinji071 <shinji071@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "2.2.2"
psycopg2-binary = "^2.8.5"
django-allauth = "^0.42.0"
pillow = "^7.1.2"
django-jet = "^1.0.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
