[tool.poetry]
name = "english-exam-app"
version = "0.1.0"
description = ""
authors = ["shinji071 <shinji071@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "2.2.2"
psycopg2-binary = "^2.8.5"
django-allauth = "^0.42.0"
pillow = "^8.1.1"
django-jet = "^1.0.8"
django_ses = "^1.0.1"
tensorflow_hub = "^0.8.0"
tensorflow_text = "^2.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
